samples/_failures_safe/1761256811_a3cbd9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afe814be.c: In function ‘main’:
./samples/SAFE/__tmp_afe814be.c:169:5: error: expected expression at end of input
  169 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_afe814be.c:169:5: error: expected declaration or statement at end of input
